demo service added

--- a/src/app/shared/ui/link-list/link-list.component.html
+++ b/src/app/shared/ui/link-list/link-list.component.html
@@ -1,5 +1,5 @@
 <mat-list role="list">
-	@for (item of sidenavOptions; track $index) {
+	@for (item of options; track $index) {
 	<mat-list-item role="listitem">
 		<a [routerLink]="item.url" routerLinkActive="active" class="link">{{
 			item.name
