index auth page design implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
 			<mat-sidenav #sidenav>
 				<app-link-list [options]="options"></app-link-list>
 			</mat-sidenav>
-			<mat-sidenav-content>
+			<mat-sidenav-content class="container">
 				<router-outlet></router-outlet>
 			</mat-sidenav-content>
 		</mat-sidenav-container>
