--- a/src/app/auth/pages/index/index.component.html
+++ b/src/app/auth/pages/index/index.component.html
@@ -1,1 +1,13 @@
-<p>welcome to authentication page!!</p>
+<mat-card class="card">
+	<mat-card-header class="header">
+		<mat-card-title class="title">Finance Manager</mat-card-title>
+		<mat-card-subtitle
+			>Let us help with your expenses and peace of mind</mat-card-subtitle
+		>
+	</mat-card-header>
+	<mat-card-content class="content">
+		<mat-icon></mat-icon>
+		<button mat-flat-button>Already have account</button>
+		<button mat-stroked-button>Don't have an account</button>
+	</mat-card-content>
+</mat-card>
