--- a/src/app/auth/pages/index/index.component.html
+++ b/src/app/auth/pages/index/index.component.html
@@ -1,6 +1,6 @@
 <mat-card class="card">
 	<mat-card-header class="header">
-		<mat-card-title class="title">Finance Manager</mat-card-title>
+		<mat-card-title class="title">Welcome</mat-card-title>
 		<mat-card-subtitle
 			>Let us help with your expenses and peace of mind</mat-card-subtitle
 		>
