--- a/src/app/shared/ui/not-found/not-found.component.html
+++ b/src/app/shared/ui/not-found/not-found.component.html
@@ -10,11 +10,9 @@
 		<mat-icon class="icon">error_outline</mat-icon>
 		<mat-divider></mat-divider>
 	</mat-card-content>
-	<mat-card-footer>
+	<mat-card-footer class="footer">
 		<mat-card-actions>
-			<button mat-stroked-button color="primary" style="width: 100%">
-				Volver a inicio
-			</button>
+			<button mat-flat-button>Volver a inicio</button>
 		</mat-card-actions>
 	</mat-card-footer>
 </mat-card>
