--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import url('/src/styles.scss');
+
 #main-container {
 	width: 100vw;
 	height: 100vh;
@@ -12,6 +14,7 @@
 		height: 90%;
 		mat-sidenav-container {
 			height: 100%;
+			background-color: $bg-primary;
 			.mat-drawer {
 				border-top-right-radius: 0% !important;
 				border-bottom-right-radius: 0% !important;
