--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import url('/src/styles.scss');
+@import '../styles.scss';
 
 #main-container {
 	width: 100vw;
@@ -14,10 +14,13 @@
 		height: 90%;
 		mat-sidenav-container {
 			height: 100%;
-			background-color: $bg-primary;
 			.mat-drawer {
 				border-top-right-radius: 0% !important;
 				border-bottom-right-radius: 0% !important;
+			}
+			mat-sidenav-content {
+				width: 100%;
+				height: 100%;
 			}
 		}
 	}
