--- a/src/app/accounts/index/index.component.html
+++ b/src/app/accounts/index/index.component.html
@@ -1,1 +1,51 @@
-<h1>Account page index</h1>
+<mat-card>
+	<app-page-intro
+		[pageTitle]="'accounts'"
+		[subText]="'manage your bank accounts or cash'"
+	></app-page-intro>
+	<mat-card-content>
+		<div class="table-container">
+			<mat-table
+				mat-table
+				[dataSource]="resultData"
+				class="example-table"
+				matSort
+				matSortActive="created"
+				matSortDisableClear
+				matSortDirection="desc"
+			>
+				<ng-container matColumnDef="id">
+					<th mat-header-cell *matHeaderCellDef>#</th>
+					<td mat-cell *matCellDef="let row">{{ row.id }}</td>
+				</ng-container>
+				<ng-container matColumnDef="account">
+					<th mat-header-cell *matHeaderCellDef>Account</th>
+					<td mat-cell *matCellDef="let row">{{ row.name }}</td>
+				</ng-container>
+				<ng-container matColumnDef="ammount">
+					<th mat-header-cell *matHeaderCellDef>Ammount</th>
+					<td mat-cell *matCellDef="let row">
+						{{ row.savedAmmount }}
+					</td>
+				</ng-container>
+				<ng-container matColumnDef="actions">
+					<th mat-header-cell *matHeaderCellDef>Actions</th>
+					<td mat-cell *matCellDef="let row"></td>
+				</ng-container>
+
+				<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+				<tr
+					mat-row
+					*matRowDef="let row; columns: displayedColumns"
+				></tr>
+			</mat-table>
+		</div>
+	</mat-card-content>
+	<mat-card-actions>
+		<mat-paginator
+			[length]="resultsLength"
+			[pageSize]="30"
+			aria-label="Select page of GitHub search results"
+		></mat-paginator>
+	</mat-card-actions>
+</mat-card>
