--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,7 @@
 		width: 100%;
 		height: 90%;
 		mat-sidenav-container {
+			width: 100%;
 			height: 100%;
 			.mat-drawer {
 				border-top-right-radius: 0% !important;
@@ -20,7 +21,8 @@
 			}
 			mat-sidenav-content {
 				width: 100%;
-				height: 100%;
+				height: 100vh;
+				padding-top: 2em;
 			}
 		}
 	}
