--- a/src/app/accounts/index/index.component.html
+++ b/src/app/accounts/index/index.component.html
@@ -48,7 +48,14 @@
 
 				<ng-container matColumnDef="actions">
 					<th mat-header-cell *matHeaderCellDef>Actions</th>
-					<td mat-cell *matCellDef="let row"></td>
+					<td mat-cell *matCellDef="let row">
+						<button mat-icon-button>
+							<mat-icon>edit</mat-icon>
+						</button>
+						<button mat-icon-button>
+							<mat-icon>delete</mat-icon>
+						</button>
+					</td>
 					<td mat-footer-cell *matFooterCellDef></td>
 				</ng-container>
 
