--- a/src/app/accounts/pages/index/index.component.html
+++ b/src/app/accounts/pages/index/index.component.html
@@ -1,86 +1,5 @@
-<mat-card>
-	<app-page-intro
-		[pageTitle]="'accounts'"
-		[subText]="'manage your bank accounts or cash'"
-	></app-page-intro>
-	<mat-card-content>
-		<div class="table-container">
-			<table
-				class="mat-elevation-z8"
-				mat-table
-				[dataSource]="resultData"
-				class="example-table"
-				matSort
-				matSortActive="created"
-				matSortDisableClear
-				matSortDirection="desc"
-			>
-				<ng-container matColumnDef="id">
-					<th
-						mat-header-cell
-						*matHeaderCellDef
-						mat-sort-header
-						disableClear
-					>
-						#
-					</th>
-					<td mat-cell *matCellDef="let row">{{ row.id }}</td>
-					<td mat-footer-cell *matFooterCellDef>
-						<b>Total</b>
-					</td>
-				</ng-container>
-
-				<ng-container matColumnDef="account">
-					<th mat-header-cell *matHeaderCellDef>Account</th>
-					<td mat-cell *matCellDef="let row">{{ row.name }}</td>
-					<td mat-footer-cell *matFooterCellDef></td>
-				</ng-container>
-
-				<ng-container matColumnDef="ammount">
-					<th mat-header-cell *matHeaderCellDef>Ammount</th>
-					<td mat-cell *matCellDef="let row">
-						{{ row.savedAmmount | currency : 'RD$' }}
-					</td>
-					<td mat-footer-cell *matFooterCellDef>
-						<b>{{ totalAmmount$ | async | currency : 'RD$' }}</b>
-					</td>
-				</ng-container>
-
-				<ng-container matColumnDef="actions">
-					<th mat-header-cell *matHeaderCellDef>Actions</th>
-					<td mat-cell *matCellDef="let row">
-						<button mat-icon-button>
-							<mat-icon>edit</mat-icon>
-						</button>
-						<button mat-icon-button>
-							<mat-icon>delete</mat-icon>
-						</button>
-					</td>
-					<td mat-footer-cell *matFooterCellDef></td>
-				</ng-container>
-
-				<!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-			<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr> -->
-
-				<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-				<tr
-					mat-row
-					*matRowDef="let row; columns: displayedColumns"
-				></tr>
-				<tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
-			</table>
-		</div>
-	</mat-card-content>
-	<mat-card-actions>
-		<mat-paginator
-			style="width: 100%"
-			(page)="loadData()"
-			[length]="resultsLength"
-			[pageSize]="10"
-			[pageSizeOptions]="[5, 10, 25, 100]"
-			[showFirstLastButtons]="true"
-			aria-label="Select page"
-		>
-		</mat-paginator>
-	</mat-card-actions>
-</mat-card>
+<app-tab-navigation
+	[title]="'Accounts'"
+	[description]="'Manage all accounts in the same place'"
+	[links]="links"
+></app-tab-navigation>
