minor accounts ui changes

--- a/src/app/accounts/pages/index/index.component.html
+++ b/src/app/accounts/pages/index/index.component.html
@@ -1,5 +1,5 @@
-<app-tab-navigation
-	[title]="'Accounts'"
-	[description]="'Manage all accounts in the same place'"
-	[links]="links"
-></app-tab-navigation>
+<app-page-intro
+	[title]="'accounts'"
+	[description]="'Manage all accounts here'"
+></app-page-intro>
+<app-tab-navigation [links]="links"></app-tab-navigation>
