components & minor changes

--- a/src/app/accounts/components/list/list.component.html
+++ b/src/app/accounts/components/list/list.component.html
@@ -1,6 +1,6 @@
 @for (item of records$(); track $index) {
 <app-resource-list
-	[avatar]="'A'"
+	[avatar]="item.name"
 	[title]="item.name"
 	[description]="''"
 	[ammount]="item.savedAmmount"
