--- a/src/app/shared/ui/resource-paginator/resource-paginator.component.html
+++ b/src/app/shared/ui/resource-paginator/resource-paginator.component.html
@@ -1,7 +1,7 @@
 <mat-paginator
 	style="margin-top: 2em"
 	[length]="totalCount"
-	[pageIndex]="filter.page"
+	[pageIndex]="pageIndexNumber"
 	[pageSize]="filter.size"
 	[pageSizeOptions]="[5, 10, 25, 100]"
 	[showFirstLastButtons]="true"
