notify dialog minor changes

--- a/src/app/shared/ui/notify-dialog/notify-dialog.component.html
+++ b/src/app/shared/ui/notify-dialog/notify-dialog.component.html
@@ -7,3 +7,6 @@
 	}
 	<p>{{ data.message }}</p>
 </mat-dialog-content>
+<mat-dialog-actions>
+	<button mat-button mat-dialog-close>Close</button>
+</mat-dialog-actions>
