confirm dialog implementation ...in progress

--- a/src/app/shared/ui/resource-list/resource-list.component.html
+++ b/src/app/shared/ui/resource-list/resource-list.component.html
@@ -43,7 +43,7 @@
 			<button mat-icon-button>
 				<mat-icon>remove_red_eye</mat-icon>
 			</button>
-			<button mat-icon-button>
+			<button mat-icon-button (click)="onDelete()">
 				<mat-icon>delete</mat-icon>
 			</button>
 		</span>
