--- a/src/app/accounts/components/list/list.component.html
+++ b/src/app/accounts/components/list/list.component.html
@@ -1,9 +1,11 @@
 @for (item of records$(); track $index) {
 <app-resource-list
+	[id]="item.id"
 	[avatar]="item.name"
 	[title]="item.name"
 	[description]="''"
 	[ammount]="item.savedAmmount"
+	(onDelete)="onItemDeleteClick($event)"
 ></app-resource-list>
 }
 <app-resource-paginator
