confirm dialog ...in progress

--- a/src/app/accounts/components/list/list.component.html
+++ b/src/app/accounts/components/list/list.component.html
@@ -5,7 +5,7 @@
 	[title]="item.name"
 	[description]="''"
 	[ammount]="item.savedAmmount"
-	(onDelete)="onItemDeleteClick($event)"
+	(onItemDeleteSelected)="onItemDeleteClick($event)"
 ></app-resource-list>
 }
 <app-resource-paginator
