--- a/src/app/shared/ui/resource-list/resource-list.component.html
+++ b/src/app/shared/ui/resource-list/resource-list.component.html
@@ -1,10 +1,6 @@
 <mat-list
 	style="padding: 1em auto; max-height: 80%; height: auto; overflow-y: auto"
 >
-	<!-- @for (shoe of typesOfShoes; track shoe) {
-      <mat-list-option>{{shoe}}</mat-list-option>
-    } -->
-
 	<mat-list-item>
 		<span
 			matListItemAvatar
@@ -43,7 +39,7 @@
 			<button mat-icon-button>
 				<mat-icon>remove_red_eye</mat-icon>
 			</button>
-			<button mat-icon-button (click)="onDelete()">
+			<button mat-icon-button (click)="onItemDeleteSelected()">
 				<mat-icon>delete</mat-icon>
 			</button>
 		</span>
